force-app/main/default/objects/Target_Diario__mdt/Target_Diario__mdt.object-meta.xml
<CustomObject>
    <description>Target de visitas a relaizar por el APM en un dia.</description>
    <label>Target Diario</label>
    <pluralLabel>Target Diario</pluralLabel>
</CustomObject>