force-app/main/default/objects/Target_Diario__mdt/fields/Numero_de_mes__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_mes__c</fullName>
    <label>Numero de mes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>