force-app/main/default/objects/Target_Diario__mdt/fields/Sub_Equipo__c.field-meta.xml
<CustomField>
    <fullName>Sub_Equipo__c</fullName>
    <label>Sub Equipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Adultos Interior</fullName>
                <default>true</default>
                <label>Adultos Interior</label>
            </value>
            <value>
                <fullName>Adultos Oncologia</fullName>
            </value>
            <value>
                <fullName>Metabolicos</fullName>
            </value>
            <value>
                <fullName>Dieta</fullName>
            </value>
            <value>
                <fullName>Pediatricos General</fullName>
            </value>
            <value>
                <fullName>Alergia</fullName>
            </value>
            <value>
                <fullName>Adultos AMBA</fullName>
            </value>
            <value>
                <fullName>Metabólicos y Dieta</fullName>
            </value>
            <value>
                <fullName>Nicho MSL</fullName>
            </value>
            <value>
                <fullName>Adultos General</fullName>
                <isActive>false</isActive>
                <label>Adultos General</label>
            </value>
            <value>
                <fullName>Institución y Comunidad</fullName>
                <isActive>false</isActive>
                <label>Institución y Comunidad</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>