force-app/main/default/objects/Target_Diario__mdt/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>