force-app/main/default/objects/Target_Diario__mdt/listViews/Target.listView-meta.xml
<ListView>
    <fullName>Target</fullName>
    <columns>Sub_Equipo__c</columns>
    <columns>Numero_de_mes__c</columns>
    <columns>Target__c</columns>
    <columns>MasterLabel</columns>
    <filterScope>Everything</filterScope>
    <label>Target</label>
    <language>en_US</language>
</ListView>